Update linked in url and fix banner margin on mobile.

--- a/process/sass/modules/_header.scss
+++ b/process/sass/modules/_header.scss
@@ -70,7 +70,7 @@ header {
       min-width: 40%;
       color: var(--color-contrast-a45);
       font-family: var(--font-secondary);
-      margin-top: 4.5em;
+      margin-top: 5.25em;
       font-size: var(--text-md);
       width: 100%;
       @include column(1);
